--- a/app/views/user/vote_result.scala.html
+++ b/app/views/user/vote_result.scala.html
@@ -1,6 +1,6 @@
 @(list: List[Stuff[Catalog,Team,Integer]])
 
-@main("Group List")(css) {
+@main("Vote Result")(css) {
     <div class="uk-grid uk-grid-collapse uk-text-center" data-uk-grid-margin >
         <div class="uk-panel uk-width-1-6">
             <a href="@controllers.user.routes.Menu.mainMenu()" class="uk-button uk-icon-arrow-left ui-text-white ui-button ui-redpink" style="width : 100% ; padding : 18px ; border-width : 0 ; height : 60px; font-size: large;"></a>
