--- a/app/views/admin/main.scala.html
+++ b/app/views/admin/main.scala.html
@@ -15,15 +15,10 @@
         <script src="@routes.Assets.at("uikit-2.17.0/js/uikit.min.js")" type="text/javascript"></script>
         @css
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
 
     </head>
     <body>
         @content
     </body>
-    @*<footer class="footer">*@
-        @*<div class="container">*@
-            @*<p>Dev By TheFrank</p>*@
-        @*</div>*@
-    @*</footer>*@
 </html>
