--- a/app/views/user/main.scala.html
+++ b/app/views/user/main.scala.html
@@ -14,16 +14,11 @@
         <script src="@routes.Assets.at("uikit-2.17.0/js/uikit.min.js")" type="text/javascript"></script>
         @css
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
 
     </head>
     <body>
-        @*<div id="wrapper">*@
-            @content
-        @*<div id="footer"> Dev </div>*@
-        @*</div>*@
-
-
+        @content
     </body>
 
 </html>
