--- a/app/views/user/main.scala.html
+++ b/app/views/user/main.scala.html
@@ -4,6 +4,14 @@
 
 <html>
     <head>
+        <meta property="og:url" content="https://m.exceedvote2015.cf">
+        <meta property="og:site_name" content="Excced Vote">
+        <meta property="og:title" content="Vote for the best app">
+        <meta property="og:description" content="Exceed camp is a camp for CPE and SKE at Kasetsart University. This camp is about software development and we will have an app contest at the end of the camp">
+        <meta property="og:image:secure_url" content="@routes.Assets.at("images/ogp.jpg")" />
+        <meta property="og:image:type" content="image/jpeg" />
+        <meta property="og:image:width" content="200" />
+        <meta property="og:image:height" content="200" />
         <title>@title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/icon.png")">
