--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -82,3 +82,9 @@ a:hover{
     bottom:0;
     left:0;
 }
+.uk-alert-danger {
+    background: #d85030;
+    color: white;
+    border-color: rgba(216, 80, 48, 0.3);
+    text-shadow: none;
+}
