--- a/app/views/admin/main.scala.html
+++ b/app/views/admin/main.scala.html
@@ -3,9 +3,9 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
+    <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
         <meta property="og:url" content="https://m.exceedvote2015.cf">
-        <meta property="og:site_name" content="Excced Vote">
+        <meta property="og:site_name" content="Exceed Vote">
         <meta property="og:title" content="Vote for the best app">
         <meta property="og:description" content="Exceed camp is a camp for CPE and SKE at Kasetsart University. This camp is about software development and we will have an app contest at the end of the camp">
         <meta property="og:image:secure_url" content="@routes.Assets.at("images/ogp.jpg")" />
