--- a/app/views/user/main.scala.html
+++ b/app/views/user/main.scala.html
@@ -5,6 +5,7 @@
 <html>
     <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
         <meta property="og:url" content="https://m.exceedvote2015.cf">
+        <meta property="og:type" content="website" />
         <meta property="og:site_name" content="Exceed Vote">
         <meta property="og:title" content="Vote for the best app">
         <meta property="og:description" content="Exceed camp is a camp for CPE and SKE at Kasetsart University. This camp is about software development and we will have an app contest at the end of the camp">
