fix bug markdown

--- a/app/views/user/edit_description.scala.html
+++ b/app/views/user/edit_description.scala.html
@@ -42,7 +42,7 @@
                                 </div>
                             </div>
                             <div class="uk-form-row">
-                                <textarea name="content" rows="5" cols="" class="uk-width-1-1 uk-height-1-1" placeholder="Write here">@team.description</textarea>
+                                <textarea name="content" rows="5" cols="" class="uk-width-1-1 uk-height-1-1" placeholder="Write here... (You can use markdown for the description)">@team.description</textarea>
                             </div>
                         </fieldset>
 
