--- a/app/views/admin/main.scala.html
+++ b/app/views/admin/main.scala.html
@@ -9,7 +9,7 @@
         <meta property="og:site_name" content="Exceed Vote">
         <meta property="og:title" content="Vote for the best app">
         <meta property="og:description" content="Exceed camp is a camp for CPE and SKE at Kasetsart University. This camp is about software development and we will have an app contest at the end of the camp">
-        <meta property="og:image:secure_url" content="@routes.Assets.at("images/ogp.jpg")" />
+        <meta property="og:image:url" content="https://m.exceedvote2015.cf/assets/images/ogp.jpg" />
         <meta property="og:image:type" content="image/jpeg" />
         <meta property="og:image:width" content="200" />
         <meta property="og:image:height" content="200" />
