--- a/app/views/user/team.scala.html
+++ b/app/views/user/team.scala.html
@@ -79,6 +79,7 @@
             temp += "@Html(text)\n";
         }
         $('#description').html(marked(temp));
+        $('#description').css("color","white");
         $('#description').find('*').css("overflow","hidden");
         $('#description').find('*').css("text-overflow","ellipsis");
         $('#description blockquote').css("color","black");
