--- a/app/views/user/main.scala.html
+++ b/app/views/user/main.scala.html
@@ -8,7 +8,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:site_name" content="Exceed Vote">
         <meta property="og:title" content="Vote for the best app">
-        <meta property="og:description" content="Exceed camp is a camp for CPE and SKE at Kasetsart University. This camp is about software development and we will have an app contest at the end of the camp">
+        <meta property="og:description" content="Exceed camp is a camp for CPE and SKE in Kasetsart University. This camp is about software development and we will have an app contest at the end of the camp">
         <meta property="og:image:url" content="https://m.exceedvote2015.cf/assets/images/ogp.jpg" />
         <meta property="og:image:type" content="image/jpeg" />
         <meta property="og:image:width" content="200" />
