Add exceed logo for login menu

--- a/app/views/user/login.scala.html
+++ b/app/views/user/login.scala.html
@@ -3,7 +3,7 @@
 @main("Welcome to Exceed Vote")(css) {
     <div class="uk-grid uk-margin-large-top" data-uk-grid-margin>
         <div class="uk-width-9-10 uk-container-center" style="text-align: center; color: #ffffff">
-            <h1 class="uk-display-inline-block" style="color: #ffffff;margin-bottom: 30px;">Exceed Vote</h1>
+            <img src="@routes.Assets.at("images/LOGOEx.png")" class="uk-width-1-1 uk-margin-large-bottom" >
         </div>
     </div>
     <form action="@controllers.user.routes.Account.login()" method="post">
