--- a/app/views/user/team.scala.html
+++ b/app/views/user/team.scala.html
@@ -80,6 +80,7 @@
         }
         $('#description').html(marked(temp));
         $('#description').children().css("color","white");
+        $('#description').find("a").css("color","#2e8ece");
         $('#description').find('*').css("overflow","hidden");
         $('#description').find('*').css("text-overflow","ellipsis");
         $('#description blockquote').css("color","black");
