--- a/app/views/user/upload_logo.scala.html
+++ b/app/views/user/upload_logo.scala.html
@@ -54,7 +54,7 @@
         bar = progressbar.find ( '.uk-progress-bar' ),
         settings = {
 
-    action : 'http://cloud.exceedvote2015.cf/upload.php', // upload url
+    action : 'https://cloud.exceedvote2015.cf/upload.php', // upload url
 
     allow : '*.(jpg|jpeg|gif|png)', // allow only images
 
