--- a/app/views/user/upload_screenshot.scala.html
+++ b/app/views/user/upload_screenshot.scala.html
@@ -72,7 +72,7 @@
     settings = {
     type : 'json',
     filelimit : '4',
-    action : 'http://cloud.exceedvote2015.cf/upload.php', // upload url
+    action : 'https://cloud.exceedvote2015.cf/upload.php', // upload url
     allow : '*.(jpg|jpeg|gif|png)', // allow only images
     loadstart : function ( ) {
     bar.css ( "width", "0%" ).text ( "0%" ) ;
