--- a/app/views/user/vote_result.scala.html
+++ b/app/views/user/vote_result.scala.html
@@ -43,7 +43,7 @@
                                     <tr>
                                         <td id="@stuff.getType().Id-@nameList.getKey.id"> </td>
                                         <td>@nameList.getKey.name</td>
-                                        <td>@BigDecimal(nameList.getValue).setScale(2,BigDecimal.RoundingMode.HALF_UP)</td>
+                                        <td>nameList.getValue</td>
                                     </tr>
                                     <script>
                                     $("#@stuff.getType().Id-@nameList.getKey.id" ).text(++i);
